- add docs to dedicated gpu controller [done]
